fix overlapping css classes in Firefox

--- a/src/core/organisms/cookie-bar/cookie-bar.scss
+++ b/src/core/organisms/cookie-bar/cookie-bar.scss
@@ -12,11 +12,10 @@
   }
 }
 
-.cookie-bar {
+.cookie-dialog {
   position: fixed;
   left: 30px;
   bottom: 30px;
-  display: block !important;
   width: 347px;
   max-width: calc(100% - 60px);
   padding: 22px 25px 16px;
